--- a/.gitignore
+++ b/.gitignore
@@ -110,9 +110,10 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
+# IDE stuff
 .spyderproject
 .spyproject
+.idea
 
 # Rope project settings
 .ropeproject
