--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,12 @@ channels:
 dependencies:
   - python=3
   - h5py
-  - numpy<=1.21
+  - numpy
   - matplotlib
   - numba
   - scipy
+  - pytest
+  - pip:
+    - cython
+    - pyfftw
+    - pylians
