--- a/eagle_25.yml
+++ b/eagle_25.yml
@@ -1,3 +1,4 @@
+# TODO: Add all possible fields here with a description
 hdf5_file_path: mock_data/eagle_25_box_haloes.hdf5
 overdensity_field_name: delta_field
 
