Make nicer plots and added README

--- a/examples/gadget_example.yml
+++ b/examples/gadget_example.yml
@@ -9,6 +9,7 @@ predict_counts_model: truncated_power_law
 plots:
   - power_spectrum
   - bi_spectrum
+  - ngal_vs_rho
 
 power_spectrum:
   show_density: false
