--- a/examples/eagle_25_example.yml
+++ b/examples/eagle_25_example.yml
@@ -1,9 +1,20 @@
-# TODO: Add all possible fields here with a description
-hdf5_file_path: mock_data/eagle.hdf5
-overdensity_field_name: refl0025n0376/ngrid32/density
-count_field_truth_name: refl0025n0376/ngrid32/galaxies_both
+num_bias_models: 2
 
-predict_counts_model: truncated_power_law
+bias_model_1:
+  hdf5_file_path: mock_data/eagle.hdf5
+  overdensity_field_name: refl0025n0376/ngrid32/density
+  count_field_truth_name: refl0025n0376/ngrid32/galaxies_both
+
+  predict_counts_model: truncated_power_law
+  name: 'eagle_25'
+
+bias_model_2:
+  hdf5_file_path: mock_data/eagle.hdf5
+  overdensity_field_name: refl0050n0752/ngrid32/density
+  count_field_truth_name: refl0050n0752/ngrid32/galaxies_both
+
+  predict_counts_model: truncated_power_law
+  name: 'eagle_50'
 
 plots:
   - power_spectrum
@@ -12,7 +23,7 @@ plots:
   - density_images
  
 power_spectrum:
-  show_density: true
+  show_density: false
   MAS:
 
 bi_spectrum:
