--- a/examples/eagle_25_example.yml
+++ b/examples/eagle_25_example.yml
@@ -6,15 +6,15 @@ bias_model_1:
   count_field_truth_name: refl0025n0376/ngrid32/galaxies_both
 
   predict_counts_model: truncated_power_law
-  name: 'eagle_25'
+  name: 'Eagle 25Mpc box'
 
 bias_model_2:
   hdf5_file_path: mock_data/eagle.hdf5
-  overdensity_field_name: refl0050n0752/ngrid32/density
-  count_field_truth_name: refl0050n0752/ngrid32/galaxies_both
+  overdensity_field_name: refl0100n1504/ngrid64/density
+  count_field_truth_name: refl0100n1504/ngrid64/galaxies_both
 
   predict_counts_model: truncated_power_law
-  name: 'eagle_50'
+  name: 'Eagle 100Mpc box'
 
 plots:
   - power_spectrum
