--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
 [build-system]
 requires = ["setuptools >= 65.4.0", "cython >= 0.29.0"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "bias-bench"
+version = '0.1.0'
