--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [meta-data]
 name = bias_bench
-version = 0.1
+version = attr: bias_bench.__version__
 author = Stuart McAlpine, Simon Ding
 author_email = your@email.address
 url = https://catscatscats
@@ -14,7 +14,7 @@ classifiers =
     Programming Language :: Python :: 3
 
 [options]
-packages=find:
+packages=bias_bench
 python_requires = >=3.7, <3.11
 install_requires =
     h5py
