--- a/examples/example_config.yml
+++ b/examples/example_config.yml
@@ -8,7 +8,7 @@ bias_model_1:
   n_mass_bins: 4
 
   predict_counts_model: truncated_power_law
-  name: 'bias_challenge'
+  name: 'Example'
 
 plots:
   - power_spectrum
@@ -16,7 +16,7 @@ plots:
   - ngal_vs_rho
   - density_images
 
-out_dir: ./bias_challenge
+out_dir: ./example
 
 one_point:
   x_lim: [0, 1.5]
