Adams addition of cont LHs -- still some issues to resolve during the meeting

--- a/examples/example_config.yml
+++ b/examples/example_config.yml
@@ -3,15 +3,15 @@ num_bias_models: 1
 bias_model_1:
   #hdf5_file_path: mock_data/data.hdf5
   #simulation_group_name: aquila_bias_challenge_training
-  hdf5_file_path: continuous_quijote_data.h5
+  hdf5_file_path: mock_data/continuous_quijote_data.h5
   simulation_group_name: quijote_continuous
   n_simulations: 1
   n_res: 1
-  n_mass_bins: 1
+  n_mass_bins: 2
 
   predict_counts_model: linear
-  predict_counts_loss: gaussian
-  predict_init_params: [1, 1, 0.5, 1]
+  predict_counts_loss: logskewnormal
+  predict_init_params: [1, 1.5, 10, 3]
   name: 'example'
 
 plots:
@@ -20,7 +20,7 @@ plots:
   - ngal_vs_rho
   - density_images
 
-out_dir: ./examples
+out_dir: ./example
 
 one_point:
   x_lim: [0, 1.5]
