--- a/examples/example_config.yml
+++ b/examples/example_config.yml
@@ -11,6 +11,7 @@ bias_model_1:
 
   predict_counts_model: linear
   predict_counts_loss: logskewnormal
+  benchmark_optimizer: emcee
   predict_init_params: [1, 1.5, 10, 3]
   name: 'example'
 
