--- a/environment.yml
+++ b/environment.yml
@@ -5,12 +5,14 @@ channels:
 dependencies:
   - python>=3.7, <3.11
   - h5py
-  - numpy=1.23.3
-  - matplotlib
+  - numpy>=1.23.3
+  - matplotlib>=3.6
+  - pandas>=2.1.4
   - numba
   - scipy
   - pytest
   - pyaml
+  - emcee>=3.1.4
   - pip:
       - cython
       - pyfftw==0.13
